# research-instrument

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  audit_sentiment.py  pyproject.toml  requirements.txt  sentiment_audit_results.csv
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  daily.md  git-ops.md  leakage-auditor.md  test-writer.md
.claude/commands/: sp-close.md
.claude/hooks/: guardrails.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  lint.yml  scheduled-buzz-scan-in.yml  scheduled-buzz-scan.yml  scheduled-screen.yml  security.yml
adapters/: __init__.py
adapters/data/: __init__.py  alphavantage_news_adapter.py  cache_mixin.py  citation_verifier.py  corroboration_gate_log.py  corroboration_store.py  earnings_history_adapter.py  fama_french_provider.py  feed_fetch.py  finnhub_analyst_adapter.py  finnhub_recommendation_adapter.py  fmp_adapter.py  gdelt_sentiment_adapter.py  google_news_adapter.py  google_trends_adapter.py  hybrid_universe_provider.py  marketaux_adapter.py  reddit_adapter.py  reddit_rss_adapter.py  retry.py  rss_adapter.py  search_harvester.py  sec_cik_resolver.py  sec_edgar_adapter.py  sec_filing_text_adapter.py  sec_form345_dataset_adapter.py  sector_provider.py  sqlite_store.py  stocktwits_adapter.py  wikipedia_article_resolver.py  wikipedia_pageviews_adapter.py  yfinance_adapter.py  yfinance_analyst_adapter.py  yfinance_price_resolver.py  yfinance_resolver.py
adapters/ml/: __init__.py  correlation_analyzer.py  cross_asset_features.py  ensemble_predictor.py  event_causal_features.py  event_impact_analyzer.py  feature_engineer.py  flan_t5_scorer.py  fundamental_feature_engineer.py  gemini_event_classifier.py  gemini_models.py  gemini_narrator.py  keyword_scorer.py  lightgbm_predictor.py  llm_summarizer.py  macro_beta_analyzer.py  model_registry.py  ollama_narrator.py  ridge_predictor.py  risk_stats_analyzer.py  sentiment_feature_engineer.py  smart_money_engineer.py  stage2_predictor.py  xgboost_predictor.py
adapters/visualization/: __init__.py  action_runner.py  book_context.py  cache.py  card_fetch.py  dashboard.py  data_loader.py  holdings_syncer.py  portfolio_view.py  price_cache.py  run_gate.py  stock_analyzer.py
application/: __init__.py  ablation.py  access_gate.py  adherence.py  analyst_panel.py  backfill_use_case.py  backtest_runner.py  batch_fit_use_case.py  bootstrap_use_case.py  brief_summary.py  calibration_readiness.py  card_loading.py  case_batch.py  case_builder.py  case_cache.py  cli.py  conviction_backtest.py  conviction_signal_cache.py  conviction_use_case.py  corroboration_readout.py  corroboration_resolver_use_case.py  corroboration_sanity.py  corroboration_use_case.py  daily_scan.py  delisted.py  discipline_backtest.py  discipline_log.py  discrimination_audit_use_case.py  divergence_ic_backtest.py  diversification_query.py  dotenv_loader.py  drip_backfill_use_case.py  evaluation.py  evidence_card.py  evidence_screen_use_case.py  fetch_health.py  fit_use_case.py  forward_tracking_use_case.py  historical_dataset.py  holdings_reader.py  (+38 more)
application/cli/: __init__.py  __main__.py  _cli_group.py  _deps.py  backtest_commands.py  brief_commands.py  corroboration_commands.py  data_commands.py  ml_commands.py  portfolio_commands.py  scan_commands.py  screen_commands.py  validation_commands.py
config/: __init__.py  loader.py
config/events/: sector_mapping.yaml
config/markets/: __init__.py  ca.yaml  in.yaml  us.yaml
config/relationships/: supply_chain.yaml
config/tickers/: nasdaq100.txt  nifty50.txt  sp500.txt  tsx60.txt
data/: recommendations.db
docs/: ARCHITECTURE.md  CONTEXT.md  HYPOTHESIS_BACKLOG.md  PHASE_LOG.md  SKILL_ROUTING.md  STATUS.md  TESTING.md  scheduling.md
domain/: __init__.py  adherence.py  analyst.py  analyst_service.py  backtest_metrics.py  bootstrap.py  brief.py  calibration.py  case_models.py  conviction.py  conviction_service.py  corroboration_gate.py  corroboration_models.py  corroboration_service.py  discipline.py  divergence_service.py  event_service.py  evidence_rag.py  evidence_registry.py  exceptions.py  factor_bands.py  factor_scores.py  filing_textchange_service.py  fit.py  insider_cluster.py  insider_gate.py  insider_terciles.py  macro_beta.py  models.py  outcome.py  outcome_service.py  pattern_memory.py  pattern_service.py  peer_relative.py  ports.py  regime.py  risk_rubric.py  risk_stats.py  screen.py  screen_buckets.py  (+9 more)
research/: 2026-06-15-risk-tab-existing-infra.md  2026-06-20-prediction-and-surfacing-state.md  2026-06-20-sp7-codebase-grounding.md  2026-06-22-efficiency-bottleneck-audit.md  codebase-investigation-2026-06-14.md
scripts/: corroboration_weekly_resolve.sh  discipline_daily.sh  discipline_weekly_review.sh  render_buzz_sentiment_preview.py  render_corroboration_preview.py  render_supply_chain_preview.py  run-dashboard-8507.sh  screenshot_dashboard.py  upload_artifacts.py  visual_qa.py
tests/: __init__.py  conftest.py  test_ablation.py  test_action_runner.py  test_action_runner_holdings.py  test_alphavantage_news_adapter.py  test_analyst_models.py  test_analyst_panel.py  test_analyst_service.py  test_analyst_view.py  test_backfill_use_case.py  test_backtest_metrics.py  test_backtest_runner.py  test_batch_fit_use_case.py  test_book_context.py  test_bootstrap_concentration.py  test_bootstrap_use_case.py  test_brief.py  test_brief_correlation_signals_pacing.py  test_build_weekly_brief_snapshot_wiring.py  test_buzz_enrichment.py  test_buzz_view.py  test_cache.py  test_calibration.py  test_calibration_readiness.py  test_card_fetch_shared.py  test_cards.py  test_charts.py  test_charts_template.py  test_citation_verifier.py  test_cli_brief_commands_sp4.py  test_cli_calibration_readiness.py  test_cli_corroboration_resolve.py  test_cli_deps.py  test_cli_ml_commands.py  test_cli_price_adapter.py  test_cli_scan_prune.py  test_cli_screen.py  test_cli_trend_sleeve.py  test_cli_weekly_brief.py  (+235 more)
(+507 files in other folders)
