[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_modal_stock_recommender"
version = "0.1.0"
description = "Multi-modal stock recommender with point-in-time backtesting and sentiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.50.0",
    "yfinance>=0.2.0",
    "praw>=7.0.0",
    "feedparser>=6.0.0",
    "google-api-python-client>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["domain*", "adapters*", "application*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v -p no:playwright"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "audit_sentiment.py"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "yfinance.*",
    "xgboost.*",
    "lightgbm.*",
    "shap.*",
    "praw.*",
    "feedparser.*",
    "googleapiclient.*",
    "numpy.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "application.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "adapters.ml.feature_engineer",
    "adapters.ml.xgboost_predictor",
    "adapters.ml.lightgbm_predictor",
    "adapters.ml.ridge_predictor",
    "adapters.data.yfinance_adapter",
]
disallow_any_generics = false

[tool.coverage.run]
omit = [
    "application/cli.py",
    "application/backtest_runner.py",
    "application/shap_analysis.py",
    "adapters/data/yfinance_adapter.py",
]

[tool.coverage.report]
omit = [
    "application/cli.py",
    "application/backtest_runner.py",
    "application/shap_analysis.py",
    "adapters/data/yfinance_adapter.py",
]
