[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_modal_stock_recommender"
version = "0.1.0"
description = "Multi-modal stock recommender with point-in-time backtesting and sentiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.50.0",
    "yfinance>=0.2.0",
    "pytrends>=4.9.2",
    "praw>=7.7.1",
    "feedparser>=6.0.0",
    "google-api-python-client>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "requests>=2.30.0",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
eval = []
s3 = [
    "boto3>=1.28",
]
dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "scipy>=1.11",
    "types-PyYAML>=6.0.0",
    "types-click>=7.0.0",
    "types-requests>=2.0.0",
    "pandas-stubs>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["domain*", "adapters*", "application*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:playwright"
markers = [
    "smoke: critical regression guard — run before every commit",
    "tab_risk: risk tab tests",
    "tab_weekly_brief: weekly brief tab tests",
    "tab_research: research candidates tab tests",
    "tab_screener: screener tab tests",
    "tab_positions: positions tab tests",
    "tab_trust: trust tab tests",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
"adapters/visualization/tabs/risk/*.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "scripts/audit_sentiment.py"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "yfinance.*",
    "xgboost.*",
    "lightgbm.*",
    "shap.*",
    "praw.*",
    "feedparser.*",
    "googleapiclient.*",
    "google.generativeai.*",
    "google.*",
    "numpy.*",
    "torch.*",
    "transformers.*",
    "scipy.*",
    "networkx.*",
    "statsmodels.*",
    "boto3.*",
    "botocore.*",
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true

# The two mypy invocations (pre-commit's isolated env vs the project venv used by
# `make typecheck`) disagree on whether google.generativeai ships type info. In the
# typed view, configure / GenerativeModel / GenerationConfig are not in __all__, so
# attribute access trips attr-defined. Disable only that code for the thin Gemini
# wrappers; disable_error_code never warns when unused, so both envs stay green.
[[tool.mypy.overrides]]
module = [
    "adapters.ml.gemini_narrator",
    "adapters.ml.gemini_event_classifier",
    "adapters.ml.gemini_models",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "application.cli",
    "application.cli._cli_group",
    "application.cli._deps",
    "application.cli.ml_commands",
    "application.cli.scan_commands",
    "application.cli.portfolio_commands",
    "application.cli.screen_commands",
    "application.cli.validation_commands",
    "application.cli.data_commands",
    "application.cli.backtest_commands",
    "application.cli.brief_commands",
]
disallow_untyped_decorators = false

# google-generativeai ships incomplete type info; its top-level helpers
# (configure / GenerativeModel / GenerationConfig) are flagged attr-defined.
[[tool.mypy.overrides]]
module = [
    "adapters.ml.gemini_narrator",
    "adapters.ml.gemini_event_classifier",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "adapters.visualization.price_cache",
    "adapters.data.earnings_history_adapter",
]
disallow_untyped_decorators = false
warn_return_any = false

# research_candidates uses @st.fragment; streamlit ships no type info for it, so
# the decorator is untyped (env-dependent: typed locally where streamlit is
# installed, untyped in the CI typecheck job where it is not). Allow the untyped
# decorator + tolerate any resulting unused-ignore, so both envs agree.
[[tool.mypy.overrides]]
module = ["adapters.visualization.tabs.research_candidates"]
disallow_untyped_decorators = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "adapters.ml.feature_engineer",
    "adapters.ml.xgboost_predictor",
    "adapters.ml.lightgbm_predictor",
    "adapters.ml.ridge_predictor",
    "adapters.ml.stage2_predictor",
    "adapters.ml.correlation_analyzer",
    "adapters.data.yfinance_adapter",
]
disallow_any_generics = false

[tool.coverage.run]
omit = [
    "application/cli/*.py",
    "application/backtest_runner.py",
    "application/shap_analysis.py",
    "application/use_cases.py",
    "application/validate_phase3b.py",
    "adapters/data/yfinance_adapter.py",
    "adapters/ml/gemini_event_classifier.py",
    "adapters/visualization/*",
]

[tool.coverage.report]
omit = [
    "application/cli/*.py",
    "application/backtest_runner.py",
    "application/shap_analysis.py",
    "application/use_cases.py",
    "application/validate_phase3b.py",
    "adapters/data/yfinance_adapter.py",
    "adapters/ml/gemini_event_classifier.py",
    "adapters/visualization/*",
]
